[gd_scene load_steps=10 format=2]

[ext_resource path="res://Script/Monk.gd" type="Script" id=1]
[ext_resource path="res://Sprite Sets/Monk.tres" type="SpriteFrames" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 13.0
height = 22.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("anim_monk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim_monk:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("anim_monk:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "idle" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("coll_atacks:polygon")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ PoolVector2Array( -8, -26, -2, -33, 2, -34, 7, -34, 11, -32, 11, -28, 10, -26, 5, -26, 0, -30, -8, -26 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("coll_atacks:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("anim_monk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim_monk:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}

[sub_resource type="Animation" id=6]
resource_name = "kick"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("anim_monk:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Kick" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim_monk:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("coll_atacks:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ PoolVector2Array( -8, -26, -2, -33, 2, -34, 7, -34, 11, -32, 11, -28, 10, -26, 5, -26, 0, -30, -8, -26 ), PoolVector2Array( 11.8827, -31.5844, 20.7948, -31.5844, 31.6873, -27.4286, 36.6384, -24.9351, 38.6189, -20.7792, 39.6091, -13.2987, 34.658, -5.81818, 28.7166, -5.81818, 28.7166, -10.8052, 32.6775, -14.1299, 31.6873, -21.6104, 25.7459, -26.5974, 19.8046, -29.9221 ), PoolVector2Array( 40.5993, -14.1299, 42.5798, -9.14286, 42.5798, 2.49351, 38.6189, 14.1299, 30.6971, 14.1299, 29.7068, 9.97403, 36.6384, 6.64935, 40.5993, -3.32468 ), PoolVector2Array(  ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("coll_atacks:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=7]
resource_name = "punch"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("anim_monk:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "punch" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim_monk:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("coll_atacks:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("coll_atacks:polygon")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ PoolVector2Array( 14.8534, -1.66234, 22.7752, -2.49351, 25.7459, -5.81818, 31.6873, -4.15584, 35.6482, -5.81818, 36.6384, -13.2987, 32.6775, -14.961, 21.785, -15.7922, 20.7948, -12.4675, 12.873, -12.4675, 13.8632, -4.98701 ), PoolVector2Array( 19.8046, -8.31169, 22.7752, -2.49351, 27.7264, -3.32468, 31.6873, -4.98701, 38.6189, -7.48052, 41.5896, -10.8052, 32.6775, -12.4675, 26.7362, -16.6234, 22.7752, -12.4675, 18.8143, -14.1299, 14.8534, -11.6364, 14.8534, -4.15584 ), PoolVector2Array( 23.7655, 0, 28.7166, -2.49351, 30.6971, -5.81818, 38.6189, -5.81818, 41.5896, -9.97403, 39.6091, -14.1299, 35.6482, -13.2987, 32.6775, -11.6364, 30.6971, -14.1299, 27.7264, -17.4545, 23.7655, -17.4545, 16.8339, -9.14286 ), PoolVector2Array( 17.8241, -7.48052, 20.7948, -5.81818, 25.7459, -5.81818, 26.7362, -7.48052, 26.7362, -12.4675, 17.8241, -12.4675 ), PoolVector2Array( 17.8241, -7.48052, 20.7948, -5.81818, 25.7459, -5.81818, 26.7362, -7.48052, 26.7362, -12.4675, 17.8241, -12.4675 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "walkL"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("anim_monk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim_monk:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("anim_monk:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk" ]
}

[sub_resource type="Animation" id=4]
resource_name = "walkR"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("anim_monk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim_monk:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("anim_monk:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk" ]
}

[node name="Monk" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="coll_monk" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="anim_monk" type="AnimatedSprite" parent="."]
position = Vector2( -4, -10 )
scale = Vector2( 1.025, 1.025 )
frames = ExtResource( 2 )
animation = "idle"

[node name="player_monk" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 2 )
anims/idle = SubResource( 5 )
anims/kick = SubResource( 6 )
anims/punch = SubResource( 7 )
anims/walkL = SubResource( 3 )
anims/walkR = SubResource( 4 )

[node name="coll_atacks" type="CollisionPolygon2D" parent="."]
position = Vector2( -5, 4 )
scale = Vector2( 1.00987, 1.20313 )
polygon = PoolVector2Array( -8, -26, -2, -33, 2, -34, 7, -34, 11, -32, 11, -28, 10, -26, 5, -26, 0, -30, -8, -26 )
